--- a/boards/stm32f3discovery/Makefile.include
+++ b/boards/stm32f3discovery/Makefile.include
@@ -6,6 +6,11 @@ export CPU_MODEL = stm32f303vc
 PORT_LINUX ?= /dev/ttyUSB0
 PORT_DARWIN ?= $(shell ls -1 /dev/tty.SLAB_USBtoUART* | head -n 1)
 
+# pasted here by blaise (src: https://lists.riot-os.org/pipermail/users/2015-November/000468.html)
+ifneq (,$(filter gnrc_netif_default,$(USEMODULE)))
+    USEMODULE += cc110x gnrc_netdev2 gnrc_cc110x
+endif
+
 # setup serial terminal
 include $(RIOTBOARD)/Makefile.include.serial
 
