--- a/Makefile.dep
+++ b/Makefile.dep
@@ -1,6 +1,11 @@
 # pull dependencies from drivers
 include $(RIOTBASE)/drivers/Makefile.dep
 
+# added this by Blaise based on (https://lists.riot-os.org/pipermail/users/2015-November/000468.html)
+ifneq (,$(filter cc110x,$(USEMODULE)))
+    DISABLE_MODULE += gnrc_sixlowpan_iphc
+endif
+
 ifneq (,$(filter libcoap,$(USEPKG)))
     USEMODULE += posix_sockets
 endif
