--- a/boards/stm32f3discovery/Makefile.include
+++ b/boards/stm32f3discovery/Makefile.include
@@ -17,5 +17,8 @@ include $(RIOTBOARD)/Makefile.include.serial
 # this board uses openocd
 include $(RIOTBOARD)/Makefile.include.openocd
 
+# include board dependencies
+include $(RIOTBOARD)/$(BOARD)/Makefile.dep
+
 # include cortex defaults
 include $(RIOTBOARD)/Makefile.include.cortexm_common
