refactored code, everything seems to be work OK, only refoactored on the node side

--- a/examples/rf-node/Makefile
+++ b/examples/rf-node/Makefile
@@ -1,5 +1,7 @@
 # name of your application
 APPLICATION = rf-node
+# Include rf-stuff "library"
+DIRS += $(CURDIR)/../rf-stuff
 
 # If no BOARD is found in the environment, use this default:
 BOARD ?= native
