--- a/drivers/saul/Makefile
+++ b/drivers/saul/Makefile
@@ -3,5 +3,9 @@ SRC = saul_str.c
 ifneq (,$(filter saul_gpio,$(USEMODULE)))
   SRC += gpio_saul.c
 endif
+ifneq (,$(filter saul_bme280,$(USEMODULE)))
+  SRC += saul_bme280.c
+  $(warning lofasz)
+endif
 
 include $(RIOTBASE)/Makefile.base
