driver should be working, write/read doesn't gets called correctly in driver/saul/bme280_saul.c

--- a/drivers/Makefile.dep
+++ b/drivers/Makefile.dep
@@ -79,3 +79,6 @@ ifneq (,$(filter xbee,$(USEMODULE)))
   USEMODULE += xtimer
   USEMODULE += netif
 endif
+ifneq (,$(filter saul_bme280,$(USEMODULE)))
+  USEMODULE += xtimer
+endif
