--- a/drivers/saul/Makefile
+++ b/drivers/saul/Makefile
@@ -5,6 +5,7 @@ ifneq (,$(filter saul_gpio,$(USEMODULE)))
 endif
 ifneq (,$(filter saul_bme280,$(USEMODULE)))
   SRC += bme280_saul.c
+  SRC += bme280.c
 endif
 
 include $(RIOTBASE)/Makefile.base
