--- a/examples/default/Makefile
+++ b/examples/default/Makefile
@@ -36,6 +36,7 @@ USEMODULE += config
 USEMODULE += saul_reg
 USEMODULE += saul_default
 USEMODULE += auto_init_saul
+USEMODULE += saul_bme280
 
 BOARD_PROVIDES_NETIF := airfy-beacon fox iotlab-m3 mulle native nrf51dongle \
 	nrf6310 pba-d-01-kw2x pca10000 pca10005 saml21-xpro samr21-xpro spark-core \
